--- a/CatFeeder/pom.xml
+++ b/CatFeeder/pom.xml
@@ -38,6 +38,11 @@
           <artifactId>slf4j-api</artifactId>
           <version>1.7.30</version>
         </dependency>
+        <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-dynamodb</artifactId>
+          <version>1.11.778</version>
+        </dependency>
     </dependencies>
 
     <build>
