--- a/CatFeeder/pom.xml
+++ b/CatFeeder/pom.xml
@@ -35,8 +35,18 @@
         </dependency>
         <dependency>
           <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.7.30</version>
+          <artifactId>jcl-over-slf4j</artifactId>
+          <version>1.7.25</version>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.25</version>
+        </dependency>
+        <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-lambda-java-log4j</artifactId>
+          <version>1.0.0</version>
         </dependency>
         <dependency>
           <groupId>com.amazonaws</groupId>
